Fix capitalization of scheduleinvalidateStyleAndLayerComposition https://bugs.webkit.org/show_bug.cgi?id=176266

Reviewed by Antti Koivisto.

* html/HTMLFrameOwnerElement.cpp:
(WebCore::HTMLFrameOwnerElement::scheduleInvalidateStyleAndLayerComposition):
(WebCore::HTMLFrameOwnerElement::scheduleinvalidateStyleAndLayerComposition): Deleted.
* html/HTMLFrameOwnerElement.h:
* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::attachRootLayer):
(WebCore::RenderLayerCompositor::detachRootLayer):
(WebCore::RenderLayerCompositor::notifyIFramesOfCompositingChange):

Canonical link: https://commits.webkit.org/192997@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221627 268f45cc-cd09-0410-ab3c-d52691b4dbfc